# Mujio-Player

./: LICENSE  README.md  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  manual.yml
@data/: resource.json
file/: SiteInfo.sql  axious_code.rs  db_service.rs  http_client.rs  main.rs  site.json  test.db  test.xml  资源网址.json
public/: history.json
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/domian/: SiteInfo.rs
src-tauri/src/fileUtils/: CrudService.rs
src-tauri/src/models/: mod.rs  movie.rs  site_info.rs
src-tauri/src/utils/: mod.rs  xml_request.rs
src/components/: Aside.vue  Explorer.vue  FilmDetail.vue  Greet.vue  History.vue  Pagination.vue  Play.vue  PlayList.vue  PlayPlyr.vue  Setting.vue  Star.vue
src/stores/: index.ts  tools.ts
src/utils/: CommonUtil.ts  SiteInfoUtil.ts  SiteUtil.ts  types.ts
